Add custom configuration file